Made more use of stream API in DashboardController